<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <TextView
        android:id="@+id/textOut"
        android:layout_width="380dp"
        android:layout_height="120dp"
        android:hint="@string/textOut"
        android:background="@color/background"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textHint"
        android:textSize="20sp"
        android:textStyle="italic|bold"
        android:gravity="center"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:gravity="center">
        <Button
            android:id="@+id/btnResume"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btnBackgroundTint1"
            android:text="@string/btnResume"
            android:padding="14dp"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/btnPause"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btnBackgroundTint1"
            android:text="@string/btnPause"
            android:padding="14dp"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/btnStop"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btnBackgroundTint1"
            android:text="@string/btnStop"
            android:padding="14dp"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/btnBack"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btnBackgroundTint2"
            android:text="@string/btnBack"
            android:padding="14dp"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/btnForward"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btnBackgroundTint2"
            android:text="@string/btnForward"
            android:padding="14dp"
            android:onClick="onClick"/>
        <Switch
            android:id="@+id/SwitchLoop"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/textSwitch"
            android:background="@color/BackgroundSwitch"
            android:textColor="@color/SwitchText"
            android:padding="14dp"
            android:textSize="16sp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/textSource"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="19sp"
        android:textStyle="italic"
        android:text="@string/textView"
        android:textColor="@color/textView"
        android:background="@color/background"
        android:layout_marginTop="10dp"
        android:paddingVertical="5dp"/>
    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/btnStream"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/btnRes"
            android:textColor="@color/btnResText"
            android:text="@string/btnStream"
            android:textSize="14sp"
            android:textStyle="italic"
            android:onClick="onClickSource"/>
        <Button
            android:id="@+id/btnRAW"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/btnRes"
            android:textColor="@color/btnResText"
            android:text="@string/btnRAW"
            android:textSize="14sp"
            android:textStyle="italic"
            android:onClick="onClickSource"/>
        <Button
            android:id="@+id/btnSD"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/btnRes"
            android:textColor="@color/btnResText"
            android:text="@string/btnSD"
            android:textSize="14sp"
            android:textStyle="italic"
            android:onClick="onClickSource"/>
    </LinearLayout>
</LinearLayout>